"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2006-12-24	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-63-chpsim-01-23-expr-06:
	  Finished (untested) simple_nonmeta_value_reference run-time lookup.
	  Moved CHPsim-specific nonmeta context class into sim/chpsim.
	  Added enum member instance to nonmeta_state.
	  Added missing value field to *Variable (nonmeta) classes. 
	  Rewrote CHPSIM::execute to pass bundled reference context argument.
	  Branch pretty much ready to merge, though untested.  


	* HACKT-00-01-04-main-00-80-63-chpsim-01-23-expr-05:
	  It compiles and links again!  (untested)
	  Completed resolution of nonmeta-indices, which currently
		forbids use of ranged expressions in indices.
	  Could use better error handling.
	  Next: simple_nonmeta_value_reference's implementation for nonmeta
		resolving data-type value collections, using meta-tag.


2006-12-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-63-chpsim-01-23-expr-04:
	  Refactored some of nonmeta_value_reference resolution code for
		better re-use, less duplication.  
	  Next: need nonmeta-resolution of nonmeta-indices.


2006-12-21	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-63-chpsim-01-23-expr-03:
	  More implementation of nonmeta_resolve methods.  
		Added __nonmeta_resolve_rvalue helper method.  
		param consts' nonmeta_resolve_copy defers to base classes now.
		remaining undefined references to simple_nonmeta...
	  TODO: __unroll_resolve_rvalue and __nonmeta_resolve_rvalue:
		re-use them in common virtual function in meta-expr base class.
		Only override for const_collection and other aggregates.  
	  Consider returning plain values instead of ref-count ptrs
		in nonmeta resolution, even pool-allocated may bottleneck.


	* HACKT-00-01-04-main-00-80-63-chpsim-01-23-expr-02: