@@ -1,27 +1,0 @@
-/**
-	\file "sim/chpsim/Variable.cc"
-	$Id: Variable.cc,v 1.1.2.2 2006/12/19 23:44:13 fang Exp $
- */
-
-#include "sim/chpsim/Variable.h"
-// obsolete
-
-#if 0
-namespace HAC {
-namespace SIM {
-namespace CHPSIM {
-//=============================================================================
-// class VariableBase method definitions
-
-VariableBase::VariableBase() : event_subscribers() {
-}
-
-//- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-VariableBase::~VariableBase() { }
-
-//=============================================================================
-}	// end namespace CHPSIM
-}	// end namespace SIM
-}	// end namespace HAC
-#endif
-
